--- a/index.html
+++ b/index.html
@@ -2,18 +2,15 @@
 <html lang="en">
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- Font Awesome -->
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
     />
-    <!-- Google Fonts -->
     <link
       href="https://fonts.googleapis.com/css2?family=Poppins&display=swap"
       rel="stylesheet"
     />
-    <!-- Stylesheet -->
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./style.css" />
     <title>Dictionary</title>
   </head>
   <body>
@@ -25,7 +22,7 @@
       </div>
       <div class="result" id="result"></div>
     </div>
-    <!-- Script -->
+
     <script src="./app.js"></script>
   </body>
 </html>
