--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
   </head>
   <body>
     <audio id="sound"></audio>
+    <p class="audio-error"></p>
     <div class="container">
       <div class="search-box">
         <input type="text" placeholder="Type the word here.." id="inp-word" />
